mobile screen overflow fix try 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,13 @@ body {
     /* overflow: hidden; */
 }
 
+#game,
 #menu-container {
     width: 100vw;
 }
  .menu-logo {
-    height: 16vw;
-    margin-top: 2vw;
+    height: 30vh;
+    margin-top: 2vh;
     background: url("../images/logo.png") no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -112,7 +113,7 @@ body {
 
 /* button click */
  .game-screen {
-    height: 100%;
+    height: 100vh;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
